      column does not correspond to any columns within 
      the local selectable of an inheriting mapper more 
      than one level deep
      
    - Fixed bug in polymorphic inheritance which made it
      difficult to set a working "order_by" on a polymorphic
      mapper.

    - Fixed a rather expensive call in Query that was slowing
      down polymorphic queries.

    - Every begin() must now be accompanied by a corresponding
      commit() or rollback(), including the implicit begin()
      in transactional sessions.

    - Fixed bug with session transaction management: parent
      transactions weren't started on the connection when
      adding a connection to a nested transaction.

    - session.transaction now always refers to the innermost
      active transaction, even when commit/rollback are called
      directly on the session transaction object.

    - Two-phase transactions can now be prepared.

    - When preparing a two-phase transaction fails on one
      connection, all the connections are rolled back.

    - session.close() didn't close all transactions when
      nested transactions were used.

    - rollback() previously erroneously set the current
      transaction directly to the parent of the transaction
      that could be rolled back to. Now it rolls back the next
      transaction up that can handle it, but sets the current
      transaction to it's parent and inactivates the
      transactions in between. Inactive transactions can only
      be rolled back or closed, any other call results in an
      error.

    - autoflush for commit() wasn't flushing for simple
      subtransactions.

    - Miscellaneous tickets: [ticket:940]

- general
    - Fixed a variety of hidden and some not-so-hidden
      compatibility issues for Python 2.3, thanks to new
      support for running the full test suite on 2.3.

    - Warnings are now issued as type exceptions.SAWarning.

- dialects
    - Finally added PGMacAddr type to postgres [ticket:580]